Gives hidden helpbox superlow z-index. Fixes #1

--- a/src/pixelperfect.css.scss
+++ b/src/pixelperfect.css.scss
@@ -278,7 +278,7 @@ $selected: #7c6996;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
   border-radius: 20px;
-  z-index: 2147483644;
+  z-index: -2147483647;
   padding: 20px 20px 10px;
   font-size: 12px;
   opacity: 0;
